// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Radio (checked + disabled) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
  cursor: not-allowed;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #F6F7FC;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
  cursor: not-allowed;
  border-color: #D9DCE9;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #B4BAD1;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

.c4:after {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":r9:"
    checked=""
    class="c1 c2"
    disabled=""
    id=":r8:"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3 c4"
    disabled=""
    for=":r8:"
  />
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6 c7"
      disabled=""
      for=":r8:"
      id=":r9:"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Radio (checked) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c4:hover {
  border-color: #2852EB;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

.c4:after {
  opacity: 1;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":r1:"
    checked=""
    class="c1 c2"
    id=":r0:"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3 c4"
    for=":r0:"
  />
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r0:"
      id=":r1:"
    >
      Checked
    </label>
  </div>
</div>
`;

exports[`render Radio (unchecked + description object) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c9 {
  transition: all 70ms ease-out;
  transition-property: color;
  color: #3C64F4;
  cursor: pointer;
  font-size: 1rem;
  font-weight: 400;
  text-decoration: none;
}

.c9:active {
  color: #0024A6;
}

.c9:hover:not(:active) {
  color: #0024A6;
}

.c10 {
  font-size: 0.875rem;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c4:hover {
  border-color: #B4BAD1;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":r5:"
    class="c1 c2"
    id=":r4:"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3 c4"
    for=":r4:"
  />
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r4:"
      id=":r5:"
    >
      Unchecked
    </label>
    <p
      class="c8"
    >
      description
       
      <a
        class="c9 c10"
        href="bar"
        target="foo"
      >
        learn more
      </a>
    </p>
  </div>
</div>
`;

exports[`render Radio (unchecked + description text) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c8 {
  color: #313440;
  margin: 0 0 1rem;
  color: #5E637A;
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
  margin: 0 0 0.75rem;
}

.c8:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c4:hover {
  border-color: #B4BAD1;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":r7:"
    class="c1 c2"
    id=":r6:"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3 c4"
    for=":r6:"
  />
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r6:"
      id=":r7:"
    >
      Unchecked
    </label>
    <p
      class="c8"
    >
      description
    </p>
  </div>
</div>
`;

exports[`render Radio (unchecked + disabled) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
  cursor: not-allowed;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #F6F7FC;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
  cursor: not-allowed;
  border-color: #D9DCE9;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #B4BAD1;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":rb:"
    class="c1 c2"
    disabled=""
    id=":ra:"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3 c4"
    disabled=""
    for=":ra:"
  />
  <div
    class="c5"
  >
    <label
      aria-hidden="true"
      class="c6 c7"
      disabled=""
      for=":ra:"
      id=":rb:"
    >
      Unchecked
    </label>
  </div>
</div>
`;

exports[`render Radio (unchecked) 1`] = `
.c6 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c6:last-child {
  margin-bottom: 0;
}

.c7 {
  cursor: pointer;
}

.c5 {
  margin-left: 0.5rem;
}

.c0 {
  align-items: flex-start;
  display: flex;
}

.c2 {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c4 {
  transition: all 150ms ease-out;
  transition-property: border-color,box-shadow;
  background-color: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 50%;
  color: #FFFFFF;
  cursor: pointer;
  display: inline-block;
  flex-shrink: 0;
  height: 1.25rem;
  position: relative;
  user-select: none;
  width: 1.25rem;
}

.c4:hover {
  border-color: #B4BAD1;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c4:after {
  transition: all 150ms ease-out;
  transition-property: opacity;
  background-color: #3C64F4;
  border-radius: 50%;
  content: '';
  height: 0.75rem;
  left: 50%;
  opacity: 0;
  position: absolute;
  top: 50%;
  transform: translate(-50%,-50%);
  width: 0.75rem;
}

<div
  class="c0"
>
  <input
    aria-labelledby=":r3:"
    class="c1 c2"
    id=":r2:"
    name="test-group"
    type="radio"
  />
  <label
    aria-hidden="true"
    class="c3 c4"
    for=":r2:"
  />
  <div
    class="c5"
  >
    <label
      class="c6 c7"
      for=":r2:"
      id=":r3:"
    >
      Unchecked
    </label>
  </div>
</div>
`;
